# oakterm

./: .gitattributes  .gitignore  .markdownlint-cli2.yaml  .mise.toml  .prettierignore  .prettierrc  CLAUDE.md  CODEOWNERS  Cargo.toml  README.md  cog.toml  lefthook.yml
.claude/: settings.json
.claude/hooks/: block-destructive-git.sh  cargo-fmt.sh  prettier-fmt.sh
.claude/rules/: docs.md  rust.md  workflow.md
.claude/skills/spec-to-tasks/: SKILL.md
.claude/skills/tdd/: SKILL.md  deep-modules.md  interface-design.md  mocking.md  refactoring.md  tests.md
.claude/skills/write-spec/: SKILL.md
.github/: renovate.json
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  codeql.yml
crates/oakterm/: Cargo.toml  build.rs
crates/oakterm-a11y/: Cargo.toml
crates/oakterm-a11y/src/: lib.rs
crates/oakterm-common/: Cargo.toml
crates/oakterm-common/src/: bidi.rs  lib.rs
crates/oakterm-config/: Cargo.toml
crates/oakterm-config/src/: event.rs  init.rs  keybind.rs  lib.rs  proxy.rs  schema.rs  stubs.rs
crates/oakterm-ctl/: Cargo.toml
crates/oakterm-ctl/src/: main.rs
crates/oakterm-daemon/: Cargo.toml  build.rs
crates/oakterm-daemon/src/: lib.rs  main.rs  server.rs  socket.rs
crates/oakterm-daemon/tests/: integration.rs
crates/oakterm-protocol/: Cargo.toml
crates/oakterm-protocol/src/: frame.rs  input.rs  lib.rs  message.rs  render.rs
crates/oakterm-pty/: Cargo.toml
crates/oakterm-pty/src/: lib.rs  unix.rs
crates/oakterm-renderer/: Cargo.toml
crates/oakterm-renderer/benches/: frame_render.rs
crates/oakterm-renderer/src/: atlas.rs  font.rs  lib.rs  pipeline.rs  shaders.rs  shaper.rs  swash_shaper.rs
crates/oakterm-renderer/tests/: gpu_pipeline.rs
crates/oakterm-terminal/: Cargo.toml
crates/oakterm-terminal/benches/: row_codec.rs  screen_buffer.rs  scroll_search.rs  tree_replay.rs  vt_parser.rs
crates/oakterm-terminal/benches/fixtures/: README.md
crates/oakterm-terminal/src/: handler.rs  lib.rs  search.rs  testing.rs  vt.rs
crates/oakterm-terminal/src/grid/: cell.rs  cursor.rs  mod.rs  row.rs  selection.rs  tests.rs
crates/oakterm-terminal/src/scroll/: archive.rs  archive_manager.rs  hot_buffer.rs  mod.rs  row_codec.rs
crates/oakterm/src/: main.rs  render_grid.rs
docs/adrs/: 0000-template.md  0001-accessibility-in-phase-zero.md  0002-performance-philosophy.md  0003-update-check-policy.md  0004-kitty-graphics-in-core.md  0005-lua-sandboxed-config.md  0006-scroll-buffer-architecture.md  0007-daemon-architecture.md  0008-shell-integration-timing.md  0009-bidi-ligature-preparedness.md  0010-layout-tree-model.md  0011-keybind-dispatch.md  0012-copy-mode-scrollback-access.md  0013-fig-autocomplete-schema.md  0014-input-classifier.md  README.md
docs/ideas/: 01-architecture.md  02-renderer.md  03-multiplexer.md  05-context-engine.md  06-plugins.md  07-agent-management.md  08-command-palette.md  09-config.md  11-inspiration.md  12-performance.md  13-abstraction.md  15-memory-management.md  16-wishlist-features.md  17-accessibility.md  18-shell-integration.md  20-platform-support.md  21-security.md  22-theming.md  23-i18n.md  24-updates.md  25-testing.md  26-license.md  27-harpoon.md  29-remote-access.md  30-conventions.md  31-brainstorm.md  32-agent-control-api.md  33-roadmap.md  34-notifications.md  35-search.md  36-terminal-fundamentals.md  37-distribution.md  38-circuit-breakers.md  39-agent-protocol.md
docs/reviews/: 2026-03-26-140000-idea-docs-audit.md  2026-03-28-160000-renderer-architecture-review.md  2026-03-29-013200-handler-grid-architecture.md  2026-04-28-210532-warp-architecture-review.md  2026-05-06-164003-herdr-architecture-review.md  README.md
docs/specs/: 0000-template.md  0001-daemon-wire-protocol.md  0002-vt-parser.md  0003-screen-buffer.md  0004-scroll-buffer.md  0005-lua-config-runtime.md  0006-accessibility-bridge.md  0007-pane-tree-layout.md  0008-copy-mode.md  0009-command-palette-status-bar.md  0010-session-persistence.md  README.md
ideas/: 01-architecture.md  02-renderer.md  03-multiplexer.md  04-sidebar.md  05-context-engine.md  06-plugins.md  07-agent-management.md  08-command-palette.md  09-config.md  10-pain-points.md  11-inspiration.md  12-performance.md  13-abstraction.md  14-debugging.md  15-memory-management.md  16-wishlist-features.md  17-accessibility.md  18-shell-integration.md  19-smart-keybinds.md  20-platform-support.md  21-security.md  22-theming.md  23-i18n.md  24-updates.md  25-testing.md  26-license.md  27-harpoon.md  28-health-check.md  29-remote-access.md  30-conventions.md  31-brainstorm.md  32-agent-control-api.md  33-roadmap.md  34-notifications.md  35-search.md  36-terminal-fundamentals.md
