[workspace]
resolver = "2"
members = [
  "crates/oakterm",
  "crates/oakterm-a11y",
  "crates/oakterm-common",
  "crates/oakterm-config",
  "crates/oakterm-ctl",
  "crates/oakterm-daemon",
  "crates/oakterm-protocol",
  "crates/oakterm-pty",
  "crates/oakterm-renderer",
  "crates/oakterm-terminal",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "BSL-1.1"
repository = "https://github.com/oakoss/oakterm"

[workspace.dependencies]
# Clipboard
arboard = "3.6.1"

# GPU rendering
wgpu = "29.0.1"

# macOS color space (Display P3)
objc2 = "0.6.4"
objc2-quartz-core = { version = "0.3.2", features = ["CAMetalLayer", "objc2-core-graphics"] }
objc2-core-graphics = { version = "0.3.2", features = ["CGColorSpace"] }

# Windowing
winit = "0.30.13"

# Accessibility
accesskit = "0.24.0"
accesskit_winit = "0.32.2"

# Lua config
gethostname = "1.1.0"
mlua = { version = "0.11.6", features = ["lua54", "vendored", "send"] }
strsim = "0.11.1"

# Async runtime
tokio = { version = "1.51.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
bytes = "1.11.1"

# Structured logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# Wire protocol
prost = "0.14.3"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }

# Scroll buffer archive
zstd = "0.13.3"
ring = "0.17.14"

# Atlas cache
lru = "0.16.3"

# Font loading and rasterization
ttf-parser = "0.25.1"
fontdb = "0.23.0"
swash = "0.2.7"
etagere = "0.3.0"
bytemuck = { version = "1.25.0", features = ["derive"] }

# Config hot-reload
notify = "8.2.0"
notify-debouncer-full = "0.7.0"

# Benchmarks
criterion = "0.8.2"
pollster = "0.4"

# PTY
rustix = { version = "1.1.4", features = [
  "pty",
  "termios",
  "process",
  "fs",
  "stdio",
] }

# Search
regex = "1.12.3"

# VT parser
vte = { version = "0.15.0", features = ["ansi"] }

# Build metadata
vergen = { version = "9.1.0", features = ["build", "cargo"] }
vergen-gitcl = { version = "9.1.0", features = ["build", "cargo"] }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
