[package]
name = "oakterm-config"
version = "0.1.0"
description = "Sandboxed Lua configuration runtime"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mlua.workspace = true
strsim.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
