[package]
name = "oakterm-config"
version = "0.1.0"
description = "Sandboxed Lua configuration runtime"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
gethostname.workspace = true
mlua.workspace = true
strsim.workspace = true

[dev-dependencies]
serde_json = "1"
tempfile = "3.27.0"

[lints]
workspace = true
