[package]
name = "oakterm-daemon"
version = "0.1.0"
description = "OakTerm daemon process"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
oakterm-config = { path = "../oakterm-config" }
oakterm-protocol = { path = "../oakterm-protocol" }
oakterm-pty = { path = "../oakterm-pty" }
oakterm-terminal = { path = "../oakterm-terminal" }
rustix = { workspace = true }
shlex = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3.27.0"

[build-dependencies]
vergen = { workspace = true }
vergen-gitcl = { workspace = true }

[lints]
workspace = true
