[package]
name = "oakterm-protocol"
version = "0.1.0"
description = "Daemon wire protocol types and serialization"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bytes = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
