[package]
name = "oakterm-pty"
version = "0.1.0"
description = "PTY spawning and I/O"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
libc = { workspace = true }
rustix = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
