[package]
name = "oakterm-renderer"
version = "0.1.0"
description = "GPU renderer with wgpu and glyph atlas"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ttf-parser = { workspace = true }
fontdb = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "frame_render"
harness = false

[lints]
workspace = true
