[package]
name = "oakterm-renderer"
version = "0.1.0"
description = "GPU renderer with wgpu and glyph atlas"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
wgpu = { workspace = true }
ttf-parser = { workspace = true }
fontdb = { workspace = true }
swash = { workspace = true }
etagere = { workspace = true }
lru = { workspace = true }
bytemuck = { workspace = true }

[features]
gpu-tests = []

[dev-dependencies]
criterion = { workspace = true }
pollster = { workspace = true }
tokio = { workspace = true }

[[bench]]
name = "frame_render"
harness = false

[lints]
workspace = true
