[package]
name = "oakterm-terminal"
version = "0.1.0"
description = "VT parser, screen buffer, and terminal state"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
oakterm-common = { path = "../oakterm-common" }
postcard.workspace = true
serde.workspace = true
vte = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "vt_parser"
harness = false

[[bench]]
name = "screen_buffer"
harness = false

[lints]
workspace = true
