[package]
name = "oakterm-terminal"
version = "0.1.0"
description = "VT parser, screen buffer, and terminal state"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
oakterm-common = { path = "../oakterm-common" }
postcard.workspace = true
regex.workspace = true
ring.workspace = true
rustix.workspace = true
serde.workspace = true
tracing.workspace = true
vte = { workspace = true }
zstd.workspace = true

[dev-dependencies]
criterion = { workspace = true }
tempfile = "3.27.0"

[[bench]]
name = "vt_parser"
harness = false

[[bench]]
name = "screen_buffer"
harness = false

[[bench]]
name = "row_codec"
harness = false

[[bench]]
name = "scroll_search"
harness = false

[[bench]]
name = "tree_replay"
harness = false

[lints]
workspace = true
