[package]
name = "oakterm"
version = "0.1.0"
description = "GPU-accelerated terminal emulator"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[build-dependencies]
vergen = { workspace = true }
vergen-gitcl = { workspace = true }

[lints]
workspace = true
