[package]
name = "oakterm"
version = "0.1.0"
description = "GPU-accelerated terminal emulator"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
winit = { workspace = true }
wgpu = { workspace = true }
oakterm-renderer = { path = "../oakterm-renderer" }
pollster = { workspace = true }

[build-dependencies]
vergen = { workspace = true }
vergen-gitcl = { workspace = true }

[lints]
workspace = true
