[package]
name = "oakterm"
version = "0.1.0"
description = "GPU-accelerated terminal emulator"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
winit = { workspace = true }
wgpu = { workspace = true }
accesskit = { workspace = true }
accesskit_winit = { workspace = true }
oakterm-a11y = { path = "../oakterm-a11y" }
oakterm-renderer = { path = "../oakterm-renderer" }
oakterm-protocol = { path = "../oakterm-protocol" }
oakterm-config = { path = "../oakterm-config" }
oakterm-daemon = { path = "../oakterm-daemon" }
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
pollster = { workspace = true }

[build-dependencies]
vergen = { workspace = true }
vergen-gitcl = { workspace = true }

[lints]
workspace = true
